--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,16 @@ button:active {
   background-color: #ea272d;
   box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
 }
+.display {
+  width: 100%;
+  height: 260px;
+  position: relative;
+  display: none;
+  margin-top: 200px;
+  margin-bottom: 5px;
+  padding-top: 0;
+  border: 5px solid #3c7e16;
+}
 
 .navigation-content {
   border-bottom: 2px solid rgba(255, 255, 255, 0.1);
