--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-color: lightgrey;
 }
 .logo img {
   height: 60px;
